--- a/TuesOct3/index.html
+++ b/TuesOct3/index.html
@@ -6,11 +6,11 @@
 
   <body>
     <h1>LOOK A HEADING!</h1>
-    <h2>Look, I'm a slightly smaller heading...</h2>
+    <h2>Look, I&apos;m a slightly smaller heading...</h2>
     <p>This is a paragraph!</p>
     <div>How about a div?</div>
     <span>This span tag is snazzy.</span>
-    <span>Oh noes, Batman, why isn't this on a new line?</span>
-    <p>Because span tags don't play that way, Robin!</p>
+    <span>Oh noes, Batman, why isn&apos;t this on a new line?</span>
+    <p>Because span tags don&apos;t play that way, Robin!</p>
   </body>
 </html>
