Just getting carried away now...

--- a/TuesOct3/index.html
+++ b/TuesOct3/index.html
@@ -12,5 +12,38 @@
     <span>This span tag is snazzy.</span>
     <span>Oh noes, Batman, why isn&apos;t this on a new line?</span>
     <p>Because span tags don&apos;t play that way, Robin!</p>
+    <a href="https://www.github.com/tjspitz">Go to Tom's Github!</a>
+    <p>Here's something in an <code>&lt;abbr&gt;</code> tag:
+      <abbr title="world wide web">www</abbr>
+    </p>
+    <p><i>Here's the <code>source code</code> :</i></p>
+    <div>
+      <code>
+        &lt!DOCTYPE html&gt; <br>
+        &lthtml&gt; <br>
+        &nbsp;&nbsp; &lthead&gt; <br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&lttitle&gt;LOOK A WEBPAGE&lt/title&gt; <br>
+        &nbsp;&nbsp;&lt/head&gt;
+        <br>
+        &nbsp;&nbsp;&ltbody&gt; <br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&lth1&gt;LOOK A HEADING!&lt/h1&gt; <br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&lth2&gt;Look, I&apos;m a slightly smaller heading...&lt/h2&gt; <br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&ltp&gt;This is a paragraph!&lt/p&gt; <br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&ltdiv&gt;How about a div?&lt/div&gt; <br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&ltspan&gt;This span tag is snazzy.&lt/span&gt; <br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&ltspan&gt;Oh noes, Batman, why isn&apos;t this on a new line?&lt/span&gt; <br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&ltp&gt;Because span tags don&apos;t play that way, Robin!&lt/p&gt; <br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&lta href="https://www.github.com/tjspitz"&gt;Go to Tom's Github!&lt/a&gt; <br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&ltp&gt;Here's something in an &ltcode&gt;&lt;abbr&gt;&lt/code&gt; tag: <br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&ltabbr title="world wide web"&gt;www&lt/abbr&gt; <br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&lt/p&gt; <br>
+          &nbsp;&nbsp;&nbsp;&nbsp;&lth5&gt;Here's the &ltcode&gt;source code&lt/code&gt;:&lt/h5&gt; <br>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&ltdiv&gt; <br>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(if I pasted all of this stuff in, would I have a recursive HTML doc...?) <br>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt/div&gt; <br>
+          &nbsp;&nbsp;&lt/body&gt; <br>
+        &lt/html&gt; <br>
+      </code>
+    </div>
   </body>
 </html>
