--- a/WedOct4/index.html
+++ b/WedOct4/index.html
@@ -5,9 +5,8 @@
   </head>
 
   <body>
-    <h2>Look, a table!</h2>
-    <hr>
-    
+    <h2>Look, some tables!</h2>
+
     <table border="3">
       <caption>
         The most informative table ever...
@@ -107,6 +106,60 @@
         </tr>
       </tbody>
     </table>
+    <br>
+    <hr>
+
+    <h2>Look, some lists!</h2>
+
+    <div>
+      Here&apos;s an ordered list:
+      <ol type="I">
+        <li>Ice cream</li>
+        <li>Bananas</li>
+        <li>Tofu</li>
+        <li>Potato chips</li>
+        <li>Llamas</li>
+      </ol>
+    </div>
+    <hr>
+
+    <div>
+      And here&apos;s an unordered list:
+      <ul type="circle">
+        <li>Squirrels</li>
+        <li>Fly Kites</li>
+        <li>List Item</li>
+        <li>Strawberries</li>
+        <li>Hula Hoops</li>
+      </ul>
+    </div>
+    <div>
+      Also, a description list:
+    </div>
+    <hr>
+
+    <dl>
+      <dt>Football</dt>
+        <dd>Touchdown = 6 points</dd>
+        <dd>Extra point = 1 or 2 points</dd>
+        <dd>Field Goal = 3 points</dd>
+        <dd>Field Goal = 3 points</dd>
+        <dd>Foul = yardage deducted/added</dd>
+      <dt>Hockey</dt>
+        <dd>Goal = 1 point</dd>
+        <dd>Foul = time in penalty box</dd>
+    </dl>
+    <hr>
+
+    <h2>Here's a &lt;pre&gt; tag:</h2>
+    <pre>
+      It renders exactly how
+            you enter it in the
+        code editor      .
+
+
+      Pretty cool, Batman!
+    </pre>
   </body>
 </html>
 
