Add new-tab target to the anchor tag

--- a/TuesOct3/index.html
+++ b/TuesOct3/index.html
@@ -12,7 +12,10 @@
     <span>This span tag is snazzy.</span>
     <span>Oh noes, Batman, why isn&apos;t this on a new line?</span>
     <p>Because span tags don&apos;t play that way, Robin!</p>
-    <a href="https://www.github.com/tjspitz">Go to Tom's Github!</a>
+    <a
+      href="https://www.github.com/tjspitz"
+      target="_blank">Go to Tom's Github!
+    </a>
     <p>Here's something in an <code>&lt;abbr&gt;</code> tag:
       <abbr title="world wide web">www</abbr>
     </p>
@@ -33,7 +36,12 @@
         &nbsp;&nbsp;&nbsp;&nbsp;&ltspan&gt;This span tag is snazzy.&lt/span&gt; <br>
         &nbsp;&nbsp;&nbsp;&nbsp;&ltspan&gt;Oh noes, Batman, why isn&apos;t this on a new line?&lt/span&gt; <br>
         &nbsp;&nbsp;&nbsp;&nbsp;&ltp&gt;Because span tags don&apos;t play that way, Robin!&lt/p&gt; <br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&lta href="https://www.github.com/tjspitz"&gt;Go to Tom's Github!&lt/a&gt; <br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&lta <br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;href="https://www.github.com/tjspitz" <br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;target="_blank" <br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&gt; <br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Go to Tom's Github! <br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&lt/a&gt; <br>
         &nbsp;&nbsp;&nbsp;&nbsp;&ltp&gt;Here's something in an &ltcode&gt;&lt;abbr&gt;&lt/code&gt; tag: <br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&ltabbr title="world wide web"&gt;www&lt/abbr&gt; <br>
         &nbsp;&nbsp;&nbsp;&nbsp;&lt/p&gt; <br>
