--- a/WedOct4/assignments/html-1/people.html
+++ b/WedOct4/assignments/html-1/people.html
@@ -10,7 +10,69 @@
         Back to the home page!
       </a>
     </button>
-    
+
     <h2>Look at all these people!</h2>
+    <div class="main-content">
+      <p>
+        I asked ChatGPT to generate a list of 20 real people and 20 fictional people. I&apos;d have written a script to render them all in a list with links to awesome pics&comma; but this assignment is about HTML&comma; so I painstakingly added them all in as list items.
+      </p>
+
+      <div>
+        <h6>Real people:</h6>
+        <ul type="circle">
+          <li>Nelson Mandela</li>
+          <li>Mother Teresa</li>
+          <li>Martin Luther King&comma; Jr.</li>
+          <li>Albert Einstein</li>
+          <li>Mahatma Gandhi</li>
+          <li>Rosa Parks</li>
+          <li>Leonardo da Vinci</li>
+          <li>Marie Curie</li>
+          <li>Abraham Lincoln</li>
+          <li>Winston Churchill</li>
+          <li>Nikola Tesla</li>
+          <li>Amelia Earhart</li>
+          <li>Steve Jobs</li>
+          <li>Elon Musk</li>
+          <li>Jane Goodall</li>
+          <li>Stephen Hawking</li>
+          <li>Malala Yousafzai</li>
+          <li>Oprah Winfrey</li>
+          <li>Pope Francis</li>
+          <li>William Shakespeare</li>
+        </ul>
+      </div>
+      <div>
+        <h6>Fake people:</h6>
+        <ul type="square">
+          <li>Link</li>
+          <li>Zelda</li>
+          <li>Ganondorf</li>
+          <li>Princess Ruto</li>
+          <li>Darunia</li>
+          <li>Impa</li>
+          <li>Saria</li>
+          <li>Nabooru</li>
+          <li>Mipha</li>
+          <li>Urbosa</li>
+          <li>Revali</li>
+          <li>Daruk</li>
+          <li>Tingle</li>
+          <li>Midna</li>
+          <li>Fi</li>
+          <li>Skull Kid</li>
+          <li>Tetra</li>
+          <li>King Daphnes Nohansen Hyrule</li>
+          <li>Groose</li>
+          <li>Beedle</li>
+        </ul>
+      </div>
+    </div>
+    <hr>
+
+    <footer>
+      <a href="#">Back to top</a>
+    </footer>
+
   </body>
 </html>
