Escaped commas & apostrophes; edited whitespace for readability

--- a/WedOct4/assignments/html-1/tables-lists.html
+++ b/WedOct4/assignments/html-1/tables-lists.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>LOOK, TABLES AND LISTS!</title>
+    <title>LOOK&comma; TABLES AND LISTS!</title>
   </head>
 
   <body>
-    <h2>Look, some page navigation!</h2>
+    <button type="button">
+      <a href="./index.html">
+        Back to the home page!
+      </a>
+    </button>
+    
+    <h2>Look&comma; some page navigation!</h2>
     <nav>
       <ol type="1">
         <li>
@@ -33,7 +39,7 @@
     </nav>
     <hr>
 
-    <h2>Look, some tables!</h2>
+    <h2>Look&comma; some tables!</h2>
 
     <table
       id="table1"
@@ -146,7 +152,7 @@
     <br>
     <hr>
 
-    <h2>Look, some lists!</h2>
+    <h2>Look&comma; some lists!</h2>
 
     <div>
       Here&apos;s an ordered list:
@@ -177,7 +183,7 @@
       </ul>
     </div>
     <div>
-      Also, a description list:
+      Also&comma; a description list:
     </div>
     <hr>
 
@@ -194,7 +200,7 @@
     </dl>
     <hr>
 
-    <h2>Here's a &lt;pre&gt; tag:</h2>
+    <h2>Here&apos;s a &lt;pre&gt; tag:</h2>
     <pre id="pretag">
       It renders exactly how
             you enter it in the
@@ -204,7 +210,7 @@
       Pretty cool, Batman!
     </pre>
     <hr>
-    
+
     <footer>
       <a href="#">Back to top</a>
     </footer>
