Minor edits for readability

--- a/WedOct4/assignments/html-1/index.html
+++ b/WedOct4/assignments/html-1/index.html
@@ -5,8 +5,8 @@
   </head>
 
   <body>
+    <h2>Look, some site navigation!</h2>
     <nav class="nav-list">
-      <h2>Look, some site navigation!</h2>
       <ul type="square">
         <li>
           <a href="./people.html">People</a>
@@ -27,7 +27,7 @@
     </nav>
     <hr>
 
-    <h1>This is a super-cool page</h1>
+    <h1>This is a super-cool page!</h1>
     <div class="main-content">
       <p>Welcome to this amazing page! It's full of amazing things!</p>
       <p>
@@ -36,6 +36,24 @@
       </p>
       <p>Oh, and there&apos;s definitely some escaped HTML characters here and there. But you won't see them unless you open your dev tools in the browser...</p>
     </div>
+
+    <div class="secondary-content">
+      <p>
+        Here&apos;s a sweet picture of Link, from the Legend of Zelda series. If you don&apos;t know who Link is, your life is sad and empty.
+      </p>
+      <figure>
+        <img
+        src="https://4.bp.blogspot.com/-PAzgW1-RIe0/UTUvX6OchGI/AAAAAAAAAPw/AnMPFJjLN4o/s1600/Legend-of-Zelda-Link-Wallpaper-the-legend-of-zelda-33549054-1440-900.jpg"
+        alt="Link, from the Legend of Zelda series"
+        width="450"
+        height="auto"
+        />
+        <figcaption>
+          Link is super cool. He owns Ganon like the Packers own the Bears.
+        </figcaption>
+      </figure>
+    </div>
+
     <footer>
       &copy; Wednesday, October 4th, 2023, by Snuffleupagus
     </footer>
