Add classes for future CSS; add footer links to all pages

--- a/WedOct4/assignments/html-1/index.html
+++ b/WedOct4/assignments/html-1/index.html
@@ -9,19 +9,19 @@
     <nav class="nav-list">
       <ul type="square">
         <li>
-          <a href="./people.html">People</a>
+          <a href="./people.html" class="link">People</a>
         </li>
         <li>
-          <a href="./musings.html">Musings</a>
+          <a href="./musings.html" class="link">Musings</a>
         </li>
         <li>
-          <a href="./links.html">More Links</a>
+          <a href="./links.html" class="link">More Links</a>
         </li>
         <li>
-          <a href="./sandwiches.html">Sandwiches</a>
+          <a href="./sandwiches.html" class="link">Sandwiches</a>
         </li>
         <li>
-          <a href="./tables-lists.html">Tables and Lists</a>
+          <a href="./tables-lists.html" class="link">Tables and Lists</a>
         </li>
       </ul>
     </nav>
@@ -56,6 +56,9 @@
 
     <footer>
       &copy; Wednesday, October 4th, 2023, by Snuffleupagus
+      <div>
+        <a href="#" class="link to-top">Back to top</a>
+      </div>
     </footer>
 
   </body>
