--- a/WedOct4/assignments/html-1/musings.html
+++ b/WedOct4/assignments/html-1/musings.html
@@ -6,11 +6,15 @@
 
   <body>
     <button type="button">
-      <a href="./index.html">
+      <a href="./index.html" class="link to-home">
         Back to the home page!
       </a>
     </button>
 
     <h2>Welcome to my musings...</h2>
+
+    <footer>
+      <a href="#" class="link to-top">Back to top</a>
+    </footer>
   </body>
 </html>
