--- a/WedOct4/assignments/html-1/people.html
+++ b/WedOct4/assignments/html-1/people.html
@@ -6,7 +6,7 @@
 
   <body>
     <button type="button">
-      <a href="./index.html">
+      <a href="./index.html" class="link to-home">
         Back to the home page!
       </a>
     </button>
@@ -71,7 +71,7 @@
     <hr>
 
     <footer>
-      <a href="#">Back to top</a>
+      <a href="#" class="link to-top">Back to top</a>
     </footer>
 
   </body>
