--- a/WedOct4/assignments/html-1/tables-lists.html
+++ b/WedOct4/assignments/html-1/tables-lists.html
@@ -6,34 +6,34 @@
 
   <body>
     <button type="button">
-      <a href="./index.html">
+      <a href="./index.html" class="link to-home">
         Back to the home page!
       </a>
     </button>
-    
+
     <h2>Look&comma; some page navigation!</h2>
     <nav>
       <ol type="1">
         <li>
-          <a href="#table1">Super-informative table</a>
+          <a href="#table1" class="link">Super-informative table</a>
         </li>
         <li>
-          <a href="#table2">Life expectancy table</a>
+          <a href="#table2" class="link">Life expectancy table</a>
         </li>
         <li>
-          <a href="#table3">Favorites table</a>
+          <a href="#table3" class="link">Favorites table</a>
         </li>
         <li>
-          <a href="#list1">Ordered list</a>
+          <a href="#list1" class="link">Ordered list</a>
         </li>
         <li>
-          <a href="#list2">Unordered list</a>
+          <a href="#list2" class="link">Unordered list</a>
         </li>
         <li>
-          <a href="#list3">Description list</a>
+          <a href="#list3" class="link">Description list</a>
         </li>
         <li>
-          <a href="#pretag">A &lt;pre&gt; tag</a>
+          <a href="#pretag" class="link">A &lt;pre&gt; tag</a>
         </li>
       </ol>
     </nav>
@@ -212,7 +212,7 @@
     <hr>
 
     <footer>
-      <a href="#">Back to top</a>
+      <a href="#" class="link to-top">Back to top</a>
     </footer>
   </body>
 </html>
