--- a/WedOct4/assignments/html-1/links.html
+++ b/WedOct4/assignments/html-1/links.html
@@ -6,10 +6,14 @@
 
   <body>
     <button type="button">
-      <a href="./index.html">
+      <a href="./index.html" class="link to-home">
         Back to the home page!
       </a>
     </button>
     <h2>So many Links!</h2>
+
+    <footer>
+      <a href="#" class="link to-top">Back to top</a>
+    </footer>
   </body>
 </html>
