--- a/WedOct4/assignments/html-1/sandwiches.html
+++ b/WedOct4/assignments/html-1/sandwiches.html
@@ -6,7 +6,7 @@
 
   <body>
     <button type="button">
-      <a href="./index.html">
+      <a href="./index.html" class="link to-home">
         Back to the home page!
       </a>
     </button>
@@ -99,5 +99,10 @@
         </ul>
       </dd>
     </dl>
+    <hr>
+
+    <footer>
+      <a href="#" class="link to-top">Back to top</a>
+    </footer>
   </body>
 </html>
