--- a/WedOct4/assignments/html-1/sandwiches.html
+++ b/WedOct4/assignments/html-1/sandwiches.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="./styles.css" rel="stylesheet" type="text/css" />
     <title>Sandwiches&comma; I guess</title>
   </head>
 
@@ -13,92 +16,94 @@
 
     <h2>Sandwiches. Totally sandwiches.</h2>
 
-    <dl>
-      <dt>These sandwiches include cheese:</dt>
-      <dd>
-        Grilled Cheese Sandwich
-        <ul>
-          <li>
-            A classic comfort food made with slices of cheese (usually cheddar&comma; American&comma; or Swiss) between two slices of buttered and toasted bread.
-          </li>
-        </ul>
-      </dd>
-      <dd>
-        BLT Sandwich
-        <ul>
-          <li>
-            A bacon&comma; lettuce&comma; and tomato sandwich that often includes a slice of cheese&comma; such as American or Swiss&comma; to add creaminess and flavor.
-          </li>
-        </ul>
-      </dd>
-      <dd>
-        Philly Cheesesteak
-        <ul>
-          <li>
-            A famous sandwich featuring thinly sliced beefsteak&comma; often with saut&eacute;ed onions and bell peppers&comma; served on a long roll and topped with melted cheese&comma; typically provolone or American.
-          </li>
-        </ul>
-      </dd>
-      <dd>
-        Caprese Sandwich
-        <ul>
-          <li>
-            A light and refreshing sandwich made with fresh mozzarella cheese&comma; tomato slices&comma; basil leaves&comma; and drizzled with balsamic glaze or vinaigrette&comma; usually served on a baguette or ciabatta bread.
-          </li>
-        </ul>
-      </dd>
-      <dd>
-        Reuben Sandwich
-        <ul>
-          <li>
-            A deli classic that includes corned beef&comma; sauerkraut&comma; Swiss cheese&comma; and Russian or Thousand Island dressing&comma; grilled between slices of rye bread.
-          </li>
-        </ul>
-      </dd>
-    </dl>
-    <dl>
-      <dt>These sandwiches include horseradish:</dt>
-      <dd>
-        Roast Beef and Horseradish Sandwich
-        <ul>
-          <li>
-            This sandwich features thinly sliced roast beef paired with creamy horseradish sauce&comma; lettuce&comma; and sometimes tomato&comma; all served on a roll or bread of your choice.
-          </li>
-        </ul>
-      </dd>
-      <dd>
-        Prime Rib Sandwich
-        <ul>
-          <li>
-            Similar to the roast beef sandwich&comma; this one uses leftover prime rib slices&comma; horseradish sauce&comma; and possibly caramelized onions or sautéed mushrooms&comma; often served on a crusty roll or baguette.
-          </li>
-        </ul>
-      </dd>
-      <dd>
-        Ham and Horseradish Sandwich
-        <ul>
-          <li>
-            This sandwich combines slices of ham with a spread of horseradish sauce&comma; Swiss cheese&comma; and sometimes pickles&comma; served on rye or another type of bread.
-          </li>
-        </ul>
-      </dd>
-      <dd>
-        Turkey and Horseradish Sandwich
-        <ul>
-          <li>
-            Thinly sliced turkey breast is paired with horseradish sauce&comma; fresh spinach or arugula&comma; and perhaps red onion or cranberry sauce&comma; typically served on whole-grain or wheat bread.
-          </li>
-        </ul>
-      </dd>
-      <dd>
-        Horseradish and Cheddar Grilled Cheese
-        <ul>
-          <li>
-            A twist on the classic grilled cheese&comma; this sandwich includes sharp cheddar cheese and a layer of horseradish sauce between two slices of buttered and toasted bread.
-          </li>
-        </ul>
-      </dd>
-    </dl>
+    <div class="main-content">
+      <dl>
+        <dt>These sandwiches include cheese:</dt>
+        <dd>
+          Grilled Cheese Sandwich
+          <ul>
+            <li>
+              A classic comfort food made with slices of cheese (usually cheddar&comma; American&comma; or Swiss) between two slices of buttered and toasted bread.
+            </li>
+          </ul>
+        </dd>
+        <dd>
+          BLT Sandwich
+          <ul>
+            <li>
+              A bacon&comma; lettuce&comma; and tomato sandwich that often includes a slice of cheese&comma; such as American or Swiss&comma; to add creaminess and flavor.
+            </li>
+          </ul>
+        </dd>
+        <dd>
+          Philly Cheesesteak
+          <ul>
+            <li>
+              A famous sandwich featuring thinly sliced beefsteak&comma; often with saut&eacute;ed onions and bell peppers&comma; served on a long roll and topped with melted cheese&comma; typically provolone or American.
+            </li>
+          </ul>
+        </dd>
+        <dd>
+          Caprese Sandwich
+          <ul>
+            <li>
+              A light and refreshing sandwich made with fresh mozzarella cheese&comma; tomato slices&comma; basil leaves&comma; and drizzled with balsamic glaze or vinaigrette&comma; usually served on a baguette or ciabatta bread.
+            </li>
+          </ul>
+        </dd>
+        <dd>
+          Reuben Sandwich
+          <ul>
+            <li>
+              A deli classic that includes corned beef&comma; sauerkraut&comma; Swiss cheese&comma; and Russian or Thousand Island dressing&comma; grilled between slices of rye bread.
+            </li>
+          </ul>
+        </dd>
+      </dl>
+      <dl>
+        <dt>These sandwiches include horseradish:</dt>
+        <dd>
+          Roast Beef and Horseradish Sandwich
+          <ul>
+            <li>
+              This sandwich features thinly sliced roast beef paired with creamy horseradish sauce&comma; lettuce&comma; and sometimes tomato&comma; all served on a roll or bread of your choice.
+            </li>
+          </ul>
+        </dd>
+        <dd>
+          Prime Rib Sandwich
+          <ul>
+            <li>
+              Similar to the roast beef sandwich&comma; this one uses leftover prime rib slices&comma; horseradish sauce&comma; and possibly caramelized onions or sautéed mushrooms&comma; often served on a crusty roll or baguette.
+            </li>
+          </ul>
+        </dd>
+        <dd>
+          Ham and Horseradish Sandwich
+          <ul>
+            <li>
+              This sandwich combines slices of ham with a spread of horseradish sauce&comma; Swiss cheese&comma; and sometimes pickles&comma; served on rye or another type of bread.
+            </li>
+          </ul>
+        </dd>
+        <dd>
+          Turkey and Horseradish Sandwich
+          <ul>
+            <li>
+              Thinly sliced turkey breast is paired with horseradish sauce&comma; fresh spinach or arugula&comma; and perhaps red onion or cranberry sauce&comma; typically served on whole-grain or wheat bread.
+            </li>
+          </ul>
+        </dd>
+        <dd>
+          Horseradish and Cheddar Grilled Cheese
+          <ul>
+            <li>
+              A twist on the classic grilled cheese&comma; this sandwich includes sharp cheddar cheese and a layer of horseradish sauce between two slices of buttered and toasted bread.
+            </li>
+          </ul>
+        </dd>
+      </dl>
+    </div>
     <hr>
 
     <footer>
