--- a/WedOct4/assignments/html-1/tables-lists.html
+++ b/WedOct4/assignments/html-1/tables-lists.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="./styles.css" rel="stylesheet" type="text/css" />
     <title>LOOK&comma; TABLES AND LISTS!</title>
   </head>
 
