Add more styles; standardize footer on all pages

--- a/WedOct4/assignments/html-1/sandwiches.html
+++ b/WedOct4/assignments/html-1/sandwiches.html
@@ -107,7 +107,11 @@
     <hr>
 
     <footer>
-      <a href="#" class="link to-top">Back to top</a>
+      &copy; Wednesday, October 4th, 2023, by Snuffleupagus
+      <div>
+        <a href="#" class="link to-top">Back to top</a>
+      </div>
     </footer>
+    
   </body>
 </html>
