--- a/WedOct4/assignments/html-1/musings.html
+++ b/WedOct4/assignments/html-1/musings.html
@@ -17,7 +17,11 @@
     <h2>Welcome to my musings...</h2>
 
     <footer>
-      <a href="#" class="link to-top">Back to top</a>
+      &copy; Wednesday, October 4th, 2023, by Snuffleupagus
+      <div>
+        <a href="#" class="link to-top">Back to top</a>
+      </div>
     </footer>
+    
   </body>
 </html>
