--- a/WedOct4/assignments/html-1/musings.html
+++ b/WedOct4/assignments/html-1/musings.html
@@ -15,6 +15,20 @@
     </button>
 
     <h2>Welcome to my musings...</h2>
+    <div class="main-content">
+      <p>
+        I went to "Meet the Meetups" last night; the pizza was great and the people were, too.
+      </p>
+      <p>
+        Despite musing about many things throughout the day, I struggle to muse for the sake of contributing to my musings page.
+      </p>
+      <p>
+        I think the previous musing was a meta-muse...
+      </p>
+      <p>
+        Ice cream is delicious.
+      </p>
+    </div>
 
     <footer>
       &copy; Wednesday, October 4th, 2023, by Snuffleupagus
@@ -22,6 +36,6 @@
         <a href="#" class="link to-top">Back to top</a>
       </div>
     </footer>
-    
+
   </body>
 </html>
