Added Madhu to links; styled the table more nicely

--- a/WedOct4/assignments/html-1/links.html
+++ b/WedOct4/assignments/html-1/links.html
@@ -117,16 +117,16 @@
           <td>
             <img
               class="git-pic"
-              src=""
-              alt="n/a"
+              src="https://avatars.githubusercontent.com/u/89452914?v=4"
+              alt="user pic of madhujanani"
               width="70"
               height="auto"
             >
           </td>
-          <td>???</td>
+          <td>madhujanani</td>
           <td>Madhujanani Mathaian</td>
           <td>
-            <a href="">???</a>
+            <a href="https://github.com/madhujanani">https://github.com/madhujanani</a>
           </td>
         </tr>
       </tbody>
