Made the Planets datalist look nicer

--- a/ThursOct5/assignments/index.html
+++ b/ThursOct5/assignments/index.html
@@ -52,15 +52,15 @@
                   required
                 />
                   <datalist id="planets">
-                    <option value="other" selected>Other</option>
-                    <option value="mercury">Mercury</option>
-                    <option value="venus">Venus</option>
-                    <option value="earth">Earth</option>
-                    <option value="mars">Mars</option>
-                    <option value="jupiter">Jupiter</option>
-                    <option value="saturn">Saturn</option>
-                    <option value="neptune">Neptune</option>
-                    <option value="krypton">Krypton</option>
+                    <option value="Other" selected></option>
+                    <option value="Mercury"></option>
+                    <option value="Venus"></option>
+                    <option value="Earth"></option>
+                    <option value="Mars"></option>
+                    <option value="Jupiter"></option>
+                    <option value="Saturn"></option>
+                    <option value="Neptune"></option>
+                    <option value="Krypton"></option>
                   </datalist>
               </td>
             </tr>
