--- a/ThursOct5/assignments/form-data.html
+++ b/ThursOct5/assignments/form-data.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="./favicon.ico">
+    <title>Hero Application Data</title>
   </head>
 
   <body>
