Added a form reset

--- a/ThursOct5/assignments/index.html
+++ b/ThursOct5/assignments/index.html
@@ -237,7 +237,10 @@
           maxlength="500"
           required
         /></textarea>
-        <input type="submit" value="Submit Application"/>
+        <div>
+          <input type="submit" value="Submit Application"/>
+          <input type="reset" value="Clear Application"/>
+        </div>
       </fieldset>
 
     </form>
