A few additional practice CSS bits

--- a/MonOct9/index.html
+++ b/MonOct9/index.html
@@ -8,6 +8,7 @@
   </head>
 
   <body>
+    <header>Enjoy this slightly-styled rendition of a previous assignment...</header>
     <h2>Look, some page navigation!</h2>
     <ol type="1">
       <li>
