Just some nicer formatting of code

--- a/MonOct9/assignments/index.html
+++ b/MonOct9/assignments/index.html
@@ -3,19 +3,22 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,400;0,600;1,200;1,400;1,600&family=Rubik:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400&display=swap"
       rel="stylesheet"
-    >
+    />
     <link href="./styles.css" rel="stylesheet" type="text/css" />
     <title>A Stylish Webpage</title>
   </head>
 
   <body>
-    <header>&#8211;&#8211;&#8211;Enjoy this oddly-styled rendition of a previous assignment&#8211;&#8211;&#8211;</header>
-    <hr>
+    <header>
+      &#8211;&#8211;&#8211;Enjoy this oddly-styled rendition of a previous
+      assignment&#8211;&#8211;&#8211;
+    </header>
+    <hr />
 
     <h2 class="shadowed">Look, some page navigation!</h2>
     <ol type="1">
@@ -41,7 +44,7 @@
         <a href="#pretag">A &lt;pre&gt; tag</a>
       </li>
     </ol>
-    <hr>
+    <hr />
 
     <h2 class="shadowed">Here are some &lt;p&gt; tags!</h2>
     <p>I am text from paragraph number 1</p>
@@ -49,7 +52,7 @@
     <p>I am text from paragraph number 3</p>
     <p>I am text from paragraph number 4</p>
     <p>I am text from paragraph number 5</p>
-    <hr>
+    <hr />
 
     <h2 class="shadowed">Look, some tables!</h2>
 
@@ -80,12 +83,16 @@
           <td>Alabama</td>
           <td>United States</td>
         </tr>
+      </tbody>
     </table>
-    <br>
-    <hr>
+
+    <br />
+    <hr />
 
     <table id="table2">
-      <caption>Life expectancy by current age</caption>
+      <caption>
+        Life expectancy by current age
+      </caption>
       <thead>
         <tr>
           <th colspan="2">65</th>
@@ -112,8 +119,8 @@
         </tr>
       </tbody>
     </table>
-    <br>
-    <hr>
+    <br />
+    <hr />
 
     <table id="table3">
       <caption>
@@ -152,17 +159,14 @@
         </tr>
       </tbody>
     </table>
-    <br>
-    <hr>
+    <br />
+    <hr />
 
     <h2 class="shadowed">Look, some lists!</h2>
 
     <div>
       Here&apos;s an ordered list:
-      <ol
-        id="list1"
-        type="I"
-      >
+      <ol id="list1" type="I">
         <li>Ice cream</li>
         <li>Bananas</li>
         <li>Tofu</li>
@@ -170,14 +174,11 @@
         <li>Llamas</li>
       </ol>
     </div>
-    <hr>
+    <hr />
 
     <div>
       And here&apos;s an unordered list:
-      <ul
-        id="list2"
-        type="circle"
-      >
+      <ul id="list2" type="circle">
         <li>Squirrels</li>
         <li>Fly Kites</li>
         <li>List Item</li>
@@ -185,23 +186,21 @@
         <li>Hula Hoops</li>
       </ul>
     </div>
-    <div>
-      Also, a description list:
-    </div>
-    <hr>
+    <div>Also, a description list:</div>
+    <hr />
 
     <dl id="list3">
       <dt>Football</dt>
-        <dd>Touchdown = 6 points</dd>
-        <dd>Extra point = 1 or 2 points</dd>
-        <dd>Field Goal = 3 points</dd>
-        <dd>Field Goal = 3 points</dd>
-        <dd>Foul = yardage deducted/added</dd>
+      <dd>Touchdown = 6 points</dd>
+      <dd>Extra point = 1 or 2 points</dd>
+      <dd>Field Goal = 3 points</dd>
+      <dd>Field Goal = 3 points</dd>
+      <dd>Foul = yardage deducted/added</dd>
       <dt>Hockey</dt>
-        <dd>Goal = 1 point</dd>
-        <dd>Foul = time in penalty box</dd>
+      <dd>Goal = 1 point</dd>
+      <dd>Foul = time in penalty box</dd>
     </dl>
-    <hr>
+    <hr />
 
     <h2 class="shadowed">Here's a &lt;pre&gt; tag:</h2>
     <pre>
