Implement a scrolling sub sandwich

--- a/10_12_23/assignments/index.html
+++ b/10_12_23/assignments/index.html
@@ -17,6 +17,11 @@
   <body>
     <main class="flex-container flex-cols">
       <header>All sandwiches. All the time.</header>
+      <img
+        src="https://clipart-library.com/img/1606449.png"
+        alt="an eerily scrolling sub sandwich"
+        class="scrolling-sub"
+      />
 
       <section class="flex-container">
         <aside class="secondary-content">
