Have a nice grid, but misbehaves with additional content items

--- a/10_13_23/index.html
+++ b/10_13_23/index.html
@@ -15,6 +15,31 @@
   </head>
 
   <body>
-
+    <div class="grid-container-parent">
+      <div class="grid-item header">
+        Grid Item Header
+        <img src="https://vignette.wikia.nocookie.net/spongebob/images/7/7d/Mermaid_Man_vs._SpongeBob_126.png/revision/latest?cb=20200106222204" alt="A Krabby Patty" />
+      </div>
+      <div class="grid-item sidebar">
+        Grid Item Sidebar
+        <img src="https://vignette.wikia.nocookie.net/spongebob/images/7/7d/Mermaid_Man_vs._SpongeBob_126.png/revision/latest?cb=20200106222204" alt="A Krabby Patty" />
+      </div>
+      <div class="grid-item">
+        Grid Item Content 1
+        <img src="https://vignette.wikia.nocookie.net/spongebob/images/7/7d/Mermaid_Man_vs._SpongeBob_126.png/revision/latest?cb=20200106222204" alt="A Krabby Patty" />
+      </div>
+      <div class="grid-item">
+        Grid Item Content 2
+        <img src="https://vignette.wikia.nocookie.net/spongebob/images/7/7d/Mermaid_Man_vs._SpongeBob_126.png/revision/latest?cb=20200106222204" alt="A Krabby Patty" />
+      </div>
+      <div class="grid-item">
+        Grid Item Content 3
+        <img src="https://vignette.wikia.nocookie.net/spongebob/images/7/7d/Mermaid_Man_vs._SpongeBob_126.png/revision/latest?cb=20200106222204" alt="A Krabby Patty" />
+      </div>
+      <div class="grid-item">
+        Grid Item Content 4
+        <img src="https://vignette.wikia.nocookie.net/spongebob/images/7/7d/Mermaid_Man_vs._SpongeBob_126.png/revision/latest?cb=20200106222204" alt="A Krabby Patty" />
+      </div>
+    </div>
   </body>
 </html>
