Working with Grid

--- a/10_13_23/index.html
+++ b/10_13_23/index.html
@@ -15,7 +15,7 @@
   </head>
 
   <body>
-    <div class="grid-container-parent">
+    <section class="grid-container-parent">
       <div class="grid-item header">
         Grid Item Header
         <img src="https://vignette.wikia.nocookie.net/spongebob/images/7/7d/Mermaid_Man_vs._SpongeBob_126.png/revision/latest?cb=20200106222204" alt="A Krabby Patty" />
@@ -40,6 +40,7 @@
         Grid Item Content 4
         <img src="https://vignette.wikia.nocookie.net/spongebob/images/7/7d/Mermaid_Man_vs._SpongeBob_126.png/revision/latest?cb=20200106222204" alt="A Krabby Patty" />
       </div>
-    </div>
+    </section>
+    <footer></footer>
   </body>
 </html>
