--- a/10_16_23/index.html
+++ b/10_16_23/index.html
@@ -22,21 +22,21 @@
       <div class="addition problem">
         Addition:
         <input type="number"> 🥪 plus <input type="number"> 🥪
-        <button onclick="additionAns()">equals</button><span class="ans"></span>
+        <button onclick="additionAns()">equals</button><span class="ans">0 🥪</span>
       </div>
       <div class="subtraction problem">
         Subtraction:
         <input type="number"> 🥪 minus <input type="number"> 🥪
-        <button onclick="subtractionAns()">equals</button><span class="ans"></span>
+        <button onclick="subtractionAns()">equals</button><span class="ans">0 🥪</span>
       </div>
       <div class="multiplication problem">
         Multiplication:
         <input type="number"> 🥪 times <input type="number"> 🥪
-        <button onclick="multiplicationAns()">equals</button><span class="ans"></span>
+        <button onclick="multiplicationAns()">equals</button><span class="ans">0 🥪</span>
       </div>
       <div class="exponent problem">
         Exponentiation:
-        <input type="number"> 🥪 to the <input type="number"> power <button onclick="exponentAns()">equals</button><span class="ans"></span>
+        <input type="number"> 🥪 to the <input type="number"> power <button onclick="exponentAns()">equals</button><span class="ans">0 🥪</span>
       </div>
     </main>
 
