Implement BMR for Day 3 assignment

--- a/10_18_23/assignments/index.html
+++ b/10_18_23/assignments/index.html
@@ -20,14 +20,12 @@
     <main class="main-content">
       <h2>Enter a message!</h2>
       <div class="problem">
-        <label for="guess">Enter a message:
-          <input id="guess" name="guess" type="text" />
+        <label for="msg">Enter a message:
+          <input id="msg" name="msg" type="text" size="50"/>
         </label>
-        <button onclick="measureMessage()">Measure my Message!</button>
+        <button onclick="measureMessage()">Measure My Message!</button>
       </div>
-      <div class="ans">
-        Click the button to measure your message!
-      </div>
+      <div class="ans">Your message contains the following characters:</div>
     </main>
 
     <footer>&copy;&nbsp;</footer>
