Modularize the counter functionality

--- a/10_18_23/assignments/index.html
+++ b/10_18_23/assignments/index.html
@@ -23,7 +23,7 @@
         <label for="msg">Enter a message:
           <input id="msg" name="msg" type="text" size="50"/>
         </label>
-        <button onclick="measureMessage()">Measure My Message!</button>
+        <button onclick="renderMessage()">Measure My Message!</button>
       </div>
       <div class="ans">Your message contains the following characters:</div>
     </main>
