--- a/10_19_23/index.html
+++ b/10_19_23/index.html
@@ -11,7 +11,7 @@
     />
     <!-- <link rel="icon" type="image/x-icon" href="./favicon.ico" /> -->
     <link href="./styles.css" rel="stylesheet" type="text/css" />
-    <title>Sandwiches&comma; For Sure!</title>
+    <title>Hooray!</title>
   </head>
 
   <body>
