Implement the assignment via instantiating ES6 classes Was unsure if this was the original intent, so I did it via plain objects as well as this way.

--- a/10_23_23/assignments/index.html
+++ b/10_23_23/assignments/index.html
@@ -106,6 +106,8 @@
 
     <footer>&copy;&nbsp;</footer>
 
-    <script src="./main.js"></script>
+    <script src="./main.js">
+      // switch src to "./mainWithClasses.js for class-based records"
+    </script>
   </body>
 </html>
