Add  to vars for jQuery convention, and implement form onsubmit attribute via jQuery

--- a/10_25_23/assignments/index.html
+++ b/10_25_23/assignments/index.html
@@ -24,7 +24,7 @@
       <button class="hide-btn">Hide!</button>
       <!-- =========================================================== -->
       <h3>Please complete this form so we can calculate your pay:</h3>
-      <form action="./salary-report.html" method="post" onsubmit="MAKE_RECORD()">
+      <form action="./salary-report.html" method="post">
         <fieldset>
           <legend>Name &amp; ID</legend>
           <label for="first-name">
