--- a/10_27_23/assignments/index.html
+++ b/10_27_23/assignments/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -12,21 +13,18 @@
     />
     <link rel="icon" type="image/x-icon" href="./favicon.ico" />
     <link href="./styles.css" rel="stylesheet" type="text/css" />
-    <title>EDP Systems</title>
+    <title>A Page Title</title>
   </head>
 
   <body>
-    <header>Employee Pay Processing</header>
+    <!-- Bootstrap Classes -->
+    <div class="container">
+      <div class="row">
+        <hi class="alert text-center alert-primary">Bookshelf App</hi>
 
-    <main class="main-content">
-      <h3>All pay records will be displayed below, if available</h3>
-      <div id="pay-data">
-        <!-- inject salary reports via RENDER_REPORTS() -->
       </div>
-    </main>
 
-    <footer>&copy;&nbsp;</footer>
+    </div>
 
-    <script src="./main.js"></script>
   </body>
 </html>
