--- a/10_27_23/assignments/index.html
+++ b/10_27_23/assignments/index.html
@@ -20,7 +20,106 @@
     <!-- Bootstrap Classes -->
     <div class="container">
       <div class="row">
-        <hi class="alert text-center alert-primary">Bookshelf App</hi>
+        <!-- make div that spans 12 column units (?) -->
+        <div class="col-lg-12">
+          <h1 class="alert text-center alert-primary">Bookshelf App</h1>
+        </div>
+        <!-- make div that spans 4 column units (?) -->
+        <div class="col-lg-4">
+          <div class="card">
+            <div class="card-body">
+              <form id="form1" action="">
+                <label for="book-title">Title:</label>
+                <input
+                  id="book-title"
+                  type="text"
+                  class="form-control"
+                  placeholder="enter a title"
+                  required
+                />
+                <label for="book-author">Author:</label>
+                <input
+                  id="book-author"
+                  type="text"
+                  class="form-control"
+                  placeholder="enter an author"
+                  required
+                />
+                <label for="book-year">Year:</label>
+                <input
+                  id="book-year"
+                  type="text"
+                  class="form-control"
+                  placeholder="e.g. 2023"
+                  required
+                />
+                <label for="book-finished">Finished?</label>
+                <input
+                  id="book-finished"
+                  type="checkbox"
+                  required
+                />
+                <hr>
+                <button type="submit" class="btn btn-sm btn-primary">
+                  Save
+                </button>
+                <button type="reset" class="btn btn-sm btn-primary">
+                  Reset
+                </button>
+              </form>
+            </div>
+          </div>
+        </div>
+        <!-- make a div that spans the other 8 units, to add to 12 -->
+        <div class="col-lg-8">
+          <div class="card">
+            <div class="card-body">
+              <h3>Unread books</h3>
+              <div>
+                <table id="unread-table" class="table table-striped">
+                  <thead>
+                    <tr>
+                      <th>Number</th>
+                      <th>Title</th>
+                      <th>Author</th>
+                      <th>Year</th>
+                      <th>Read</th>
+                      <th>Edit</th>
+                      <th>Delete</th>
+                    </tr>
+                  </thead>
+                  <tbody id="unread-table-body">
+                    <!-- inject <tr> <td>...</td> </tr> -->
+                  </tbody>
+                </table>
+              </div>
+              <hr>
+              
+              <h3>Read books</h3>
+              <div>
+                <table id="read-table" class="table table-striped">
+                  <thead>
+                    <tr>
+                      <th>Number</th>
+                      <th>Title</th>
+                      <th>Author</th>
+                      <th>Year</th>
+                      <th>Read</th>
+                      <th>Edit</th>
+                      <th>Delete</th>
+                    </tr>
+                  </thead>
+                  <tbody id="read-table-body">
+                    <!-- inject <tr> <td>...</td> </tr> -->
+                  </tbody>
+                </table>
+              </div>
+
+            </div>
+
+          </div>
+
+        </div>
 
       </div>
 
