--- a/10_27_23/assignments/index.html
+++ b/10_27_23/assignments/index.html
@@ -4,13 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    >
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,400;0,600;1,200;1,400;1,600&family=Rubik:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400&display=swap"
       rel="stylesheet"
-    />
+    /> -->
     <link rel="icon" type="image/x-icon" href="./favicon.ico" />
     <link href="./styles.css" rel="stylesheet" type="text/css" />
     <title>A Page Title</title>
@@ -28,39 +33,41 @@
         <div class="col-lg-4">
           <div class="card">
             <div class="card-body">
-              <form id="form1" action="">
-                <label for="book-title">Title:</label>
+              <form id="new-book">
+                <label for="title">Title:</label>
                 <input
-                  id="book-title"
+                  id="title"
                   type="text"
                   class="form-control"
                   placeholder="enter a title"
                   required
                 />
-                <label for="book-author">Author:</label>
+                <label for="author">Author:</label>
                 <input
-                  id="book-author"
+                  id="author"
                   type="text"
                   class="form-control"
                   placeholder="enter an author"
                   required
                 />
-                <label for="book-year">Year:</label>
+                <label for="year">Year:</label>
                 <input
-                  id="book-year"
+                  id="year"
                   type="text"
                   class="form-control"
                   placeholder="e.g. 2023"
                   required
                 />
-                <label for="book-finished">Finished?</label>
+                <br>
+
+                <label for="finished">Finished?</label>
                 <input
-                  id="book-finished"
+                  id="finished"
                   type="checkbox"
-                  required
                 />
                 <hr>
-                <button type="submit" class="btn btn-sm btn-primary">
+
+                <button type="button" class="btn btn-sm btn-primary" onclick="showAll()">
                   Save
                 </button>
                 <button type="reset" class="btn btn-sm btn-primary">
@@ -94,7 +101,7 @@
                 </table>
               </div>
               <hr>
-              
+
               <h3>Read books</h3>
               <div>
                 <table id="read-table" class="table table-striped">
@@ -115,15 +122,21 @@
                 </table>
               </div>
 
+              <!-- end card-body -->
             </div>
 
+            <!-- end card -->
           </div>
 
+          <!-- end col-lg-8 -->
         </div>
 
+        <!-- end row -->
       </div>
 
+      <!-- end container -->
     </div>
 
+    <script src="./main.js"></script>
   </body>
 </html>
