Implement functionality for saving, fetching, toggling, and deleting books. Separate concerns for each scenario. TO-DO: implement editing of a book.

--- a/10_27_23/assignments/index.html
+++ b/10_27_23/assignments/index.html
@@ -64,10 +64,11 @@
                 <input
                   id="finished"
                   type="checkbox"
+                  onclick="toggleCheckbox()"
                 />
                 <hr>
 
-                <button type="button" class="btn btn-sm btn-primary" onclick="showAll()">
+                <button type="button" class="btn btn-sm btn-primary" onclick="saveBook()">
                   Save
                 </button>
                 <button type="reset" class="btn btn-sm btn-primary">
