Implement $.ajax() assignment

--- a/11_2_23/assignments/index.html
+++ b/11_2_23/assignments/index.html
@@ -25,7 +25,7 @@
           <h1 class="alert text-center alert-primary">Data McFetcher</h1>
         </div>
         <!-- make div that spans 4 column units (?) -->
-        <div class="col-lg-4">
+        <div class="col-lg-2" align="center">
           <div class="card">
             <div class="card-body">
               <button class="btn btn-med btn-primary" onclick="renderPeople()">Show People!</button>
@@ -33,7 +33,7 @@
           </div>
         </div>
         <!-- make a div that spans the other 8 units, to add to 12 -->
-        <div class="col-lg-8">
+        <div id="main-content" class="col-lg-10">
           <div class="card">
             <div class="card-body">
               <h3>Data</h3>
