--- a/10_27_23/assignments/index.html
+++ b/10_27_23/assignments/index.html
@@ -12,7 +12,7 @@
     >
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
     <link rel="icon" type="image/x-icon" href="./favicon.ico" />
-    <link href="./styles.css" rel="stylesheet" type="text/css" />
+    <!-- <link href="./styles.css" rel="stylesheet" type="text/css" /> -->
     <title>A Page Title</title>
   </head>
 
